[gd_scene load_steps=11 format=3 uid="uid://ci4tws2vtsrby"]

[ext_resource type="Script" uid="uid://ch5ll77dhl2qx" path="res://minigames/contraseña/scripts/MainContraseña.gd" id="1_l8jow"]
[ext_resource type="FontFile" uid="uid://pkt0aclf3ymx" path="res://assets/contraseña/fonts/BoldPixels.ttf" id="2_bfvn4"]
[ext_resource type="AudioStream" uid="uid://bv8jhrm6hd0ee" path="res://assets/contraseña/audio/PasswordBGM.ogg" id="3_agaw1"]
[ext_resource type="AudioStream" uid="uid://c7akslcdhecih" path="res://assets/contraseña/audio/Correct.ogg" id="4_rvhwq"]
[ext_resource type="AudioStream" uid="uid://bgtttj8yadm18" path="res://assets/contraseña/audio/078.wav" id="5_f63fg"]
[ext_resource type="FontFile" uid="uid://cg7l8osul7wsi" path="res://assets/contraseña/fonts/RaccoonSerif-Bold.otf" id="6_2i0l6"]
[ext_resource type="Shader" uid="uid://3lck2gwmkb41" path="res://minigames/contraseña/scripts/crt_shader.gdshader" id="7_37fxg"]
[ext_resource type="Script" uid="uid://bevnmay5etdcr" path="res://minigames/contraseña/scripts/mensaje.gd" id="8_dkeps"]
[ext_resource type="PackedScene" uid="uid://cmp2cvj5x3ur8" path="res://scenes/AniBomba.tscn" id="9_becya"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0at3r"]
shader = ExtResource("7_37fxg")
shader_parameter/screen_curvature = 0.0
shader_parameter/scanline_brightness = 0.50000002375
shader_parameter/scanline_density = 1.0
shader_parameter/vignette_intensity = 0.800000038

[node name="MainContraseña" type="Node2D"]
script = ExtResource("1_l8jow")

[node name="GameTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="RestartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MessageLabel" type="Label" parent="."]
offset_left = 157.0
offset_top = 424.0
offset_right = 197.0
offset_bottom = 554.0
theme_override_fonts/font = ExtResource("2_bfvn4")
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1

[node name="FlickerTimer" type="Timer" parent="."]
wait_time = 0.08

[node name="BgmPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_agaw1")
autoplay = true
parameters/looping = true

[node name="WinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_rvhwq")

[node name="LoseSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_f63fg")

[node name="Label" type="Label" parent="."]
offset_left = 64.0
offset_top = 23.0
offset_right = 1124.0
offset_bottom = 106.0
theme_override_fonts/font = ExtResource("6_2i0l6")
theme_override_font_sizes/font_size = 65
text = "Elija una contraseña segura "

[node name="Background" type="Sprite2D" parent="."]
z_index = -10

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_0at3r")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Mensaje" type="Label" parent="."]
offset_left = 155.0
offset_top = 531.0
offset_right = 975.0
offset_bottom = 618.0
theme_override_fonts/font = ExtResource("2_bfvn4")
theme_override_font_sizes/font_size = 25
text = "LOS HACKERS ODIAN LAS CONTRASEÑAS SEGURAS. ¡HAZ QUE TE ODIEN!"
script = ExtResource("8_dkeps")

[node name="AniBomba" parent="." instance=ExtResource("9_becya")]

[connection signal="timeout" from="FlickerTimer" to="." method="_on_flicker_timer_timeout"]
